[gd_scene load_steps=36 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://TimeSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/images/Cuadro1.png" type="Texture" id=6]
[ext_resource path="res://assets/img/images/Cuadro2.png" type="Texture" id=7]
[ext_resource path="res://assets/img/images/Letra.png" type="Texture" id=8]
[ext_resource path="res://assets/img/images/Letra (1).png" type="Texture" id=9]
[ext_resource path="res://assets/img/images/Letra (2).png" type="Texture" id=10]
[ext_resource path="res://assets/img/images/Letra (3).png" type="Texture" id=11]
[ext_resource path="res://assets/img/images/Letra (4).png" type="Texture" id=12]
[ext_resource path="res://assets/img/images/Letra (5).png" type="Texture" id=13]
[ext_resource path="res://assets/img/images/Letra (6).png" type="Texture" id=14]
[ext_resource path="res://assets/img/images/Letra (7).png" type="Texture" id=15]
[ext_resource path="res://assets/img/images/Letra (8).png" type="Texture" id=16]
[ext_resource path="res://assets/img/images/Letra (15).png" type="Texture" id=17]
[ext_resource path="res://assets/img/images/Letra (17).png" type="Texture" id=18]
[ext_resource path="res://assets/img/images/Letra (10).png" type="Texture" id=19]
[ext_resource path="res://assets/img/images/Letra (16).png" type="Texture" id=20]
[ext_resource path="res://assets/img/images/Letra (12).png" type="Texture" id=21]
[ext_resource path="res://assets/img/images/Letra (9).png" type="Texture" id=22]
[ext_resource path="res://assets/img/images/Letra (11).png" type="Texture" id=23]
[ext_resource path="res://assets/img/images/Letra (13).png" type="Texture" id=24]
[ext_resource path="res://assets/img/images/Letra (26).png" type="Texture" id=25]
[ext_resource path="res://assets/img/images/Letra (19).png" type="Texture" id=26]
[ext_resource path="res://assets/img/images/Letra (20).png" type="Texture" id=27]
[ext_resource path="res://assets/img/images/Letra (18).png" type="Texture" id=28]
[ext_resource path="res://assets/img/images/Letra (22).png" type="Texture" id=29]
[ext_resource path="res://assets/img/images/Letra (21).png" type="Texture" id=30]
[ext_resource path="res://assets/img/images/Letra (23).png" type="Texture" id=31]
[ext_resource path="res://assets/img/images/Letra (24).png" type="Texture" id=32]
[ext_resource path="res://assets/img/images/Letra (25).png" type="Texture" id=33]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "TÃ­tulo del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
visible = false
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSprite" parent="." instance=ExtResource( 5 )]

[node name="Button" type="Button" parent="."]
margin_left = 440.0
margin_top = 264.0
margin_right = 512.0
margin_bottom = 314.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button"]
position = Vector2( 36, 24 )
scale = Vector2( 1.04348, 1 )
texture = ExtResource( 8 )

[node name="Button19" type="Button" parent="."]
margin_left = 440.0
margin_top = 392.0
margin_right = 512.0
margin_bottom = 442.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button19"]
position = Vector2( 35.5, 24 )
scale = Vector2( 1.64286, 1 )
texture = ExtResource( 22 )

[node name="Button23" type="Button" parent="."]
margin_left = 504.0
margin_top = 392.0
margin_right = 576.0
margin_bottom = 442.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button23"]
position = Vector2( 36, 24.25 )
scale = Vector2( 1.26316, 1.02381 )
texture = ExtResource( 19 )

[node name="Button24" type="Button" parent="."]
margin_left = 568.0
margin_top = 392.0
margin_right = 640.0
margin_bottom = 442.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button24"]
position = Vector2( 36, 24.25 )
scale = Vector2( 1.5, 1.02381 )
texture = ExtResource( 23 )

[node name="Button25" type="Button" parent="."]
margin_left = 632.0
margin_top = 392.0
margin_right = 704.0
margin_bottom = 442.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button25"]
position = Vector2( 36, 24.25 )
scale = Vector2( 1.04348, 1.02381 )
texture = ExtResource( 21 )

[node name="Button26" type="Button" parent="."]
margin_left = 696.0
margin_top = 392.0
margin_right = 768.0
margin_bottom = 442.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button26"]
position = Vector2( 36, 24.25 )
scale = Vector2( 1.26316, 1.02381 )
texture = ExtResource( 24 )

[node name="Button27" type="Button" parent="."]
margin_left = 824.0
margin_top = 392.0
margin_right = 896.0
margin_bottom = 442.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button27"]
position = Vector2( 36, 24.25 )
scale = Vector2( 1, 1.02381 )
texture = ExtResource( 25 )

[node name="Button28" type="Button" parent="."]
margin_left = 888.0
margin_top = 392.0
margin_right = 960.0
margin_bottom = 442.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button28"]
position = Vector2( 36, 24.25 )
scale = Vector2( 1.26316, 1.02381 )
texture = ExtResource( 17 )

[node name="Button29" type="Button" parent="."]
margin_left = 952.0
margin_top = 392.0
margin_right = 1024.0
margin_bottom = 442.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button29"]
position = Vector2( 36.2501, 24.25 )
scale = Vector2( 0.980001, 1.02381 )
texture = ExtResource( 20 )

[node name="Button30" type="Button" parent="."]
margin_left = 440.0
margin_top = 512.0
margin_right = 512.0
margin_bottom = 562.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button30"]
position = Vector2( 36, 24.25 )
scale = Vector2( 1.33333, 1.02381 )
texture = ExtResource( 18 )

[node name="Button21" type="Button" parent="."]
margin_left = 507.263
margin_top = 512.0
margin_right = 579.263
margin_bottom = 562.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button21"]
position = Vector2( 36.25, 24 )
scale = Vector2( 1.44118, 1 )
texture = ExtResource( 28 )

[node name="Button31" type="Button" parent="."]
margin_left = 568.0
margin_top = 512.0
margin_right = 640.0
margin_bottom = 562.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button31"]
position = Vector2( 36.25, 24 )
scale = Vector2( 1.44118, 1 )
texture = ExtResource( 26 )

[node name="Button32" type="Button" parent="."]
margin_left = 632.0
margin_top = 512.0
margin_right = 704.0
margin_bottom = 562.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button32"]
position = Vector2( 36, 24.25 )
scale = Vector2( 1.26316, 1.02273 )
texture = ExtResource( 27 )

[node name="Button33" type="Button" parent="."]
margin_left = 696.0
margin_top = 512.0
margin_right = 768.0
margin_bottom = 562.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button33"]
position = Vector2( 36, 24 )
scale = Vector2( 1.09091, 1 )
texture = ExtResource( 30 )

[node name="Button34" type="Button" parent="."]
margin_left = 760.0
margin_top = 512.0
margin_right = 832.0
margin_bottom = 562.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button34"]
position = Vector2( 36, 24 )
scale = Vector2( 0.727273, 1 )
texture = ExtResource( 29 )

[node name="Button35" type="Button" parent="."]
margin_left = 824.0
margin_top = 512.0
margin_right = 896.0
margin_bottom = 562.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button35"]
position = Vector2( 36, 24 )
scale = Vector2( 1.20001, 1 )
texture = ExtResource( 31 )

[node name="Button36" type="Button" parent="."]
margin_left = 888.0
margin_top = 512.0
margin_right = 960.0
margin_bottom = 562.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button36"]
position = Vector2( 36, 24 )
scale = Vector2( 1.19999, 1 )
texture = ExtResource( 32 )

[node name="Button37" type="Button" parent="."]
margin_left = 952.0
margin_top = 512.0
margin_right = 1024.0
margin_bottom = 562.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button37"]
position = Vector2( 36.25, 24 )
scale = Vector2( 1.36112, 1 )
texture = ExtResource( 33 )

[node name="Button53" type="Button" parent="."]
margin_left = 632.0
margin_top = 632.0
margin_right = 704.0
margin_bottom = 682.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button53"]
position = Vector2( 36.25, 24 )
scale = Vector2( 1.36112, 1 )
texture = ExtResource( 33 )

[node name="Button4" type="Button" parent="."]
margin_left = 504.0
margin_top = 264.0
margin_right = 576.0
margin_bottom = 314.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button4"]
position = Vector2( 36, 24 )
scale = Vector2( 1.26316, 1 )
texture = ExtResource( 9 )

[node name="Button6" type="Button" parent="."]
margin_left = 568.0
margin_top = 264.0
margin_right = 640.0
margin_bottom = 314.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button6"]
position = Vector2( 36, 24 )
scale = Vector2( 1.2, 0.847826 )
texture = ExtResource( 10 )

[node name="Button7" type="Button" parent="."]
margin_left = 632.0
margin_top = 264.0
margin_right = 704.0
margin_bottom = 314.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button7"]
position = Vector2( 36, 24 )
scale = Vector2( 1.14286, 1 )
texture = ExtResource( 11 )

[node name="Button17" type="Button" parent="."]
margin_left = 696.0
margin_top = 264.0
margin_right = 768.0
margin_bottom = 314.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button17"]
position = Vector2( 36, 24 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 12 )

[node name="Button9" type="Button" parent="."]
margin_left = 760.0
margin_top = 264.0
margin_right = 832.0
margin_bottom = 314.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button9"]
position = Vector2( 36, 24 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 13 )

[node name="Button12" type="Button" parent="."]
margin_left = 824.0
margin_top = 264.0
margin_right = 896.0
margin_bottom = 314.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button12"]
position = Vector2( 36, 24 )
scale = Vector2( 1.2, 1 )
texture = ExtResource( 14 )

[node name="Button13" type="Button" parent="."]
margin_left = 888.0
margin_top = 264.0
margin_right = 960.0
margin_bottom = 314.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button13"]
position = Vector2( 36.25, 24 )
scale = Vector2( 1.28947, 1 )
texture = ExtResource( 15 )

[node name="Button16" type="Button" parent="."]
margin_left = 952.0
margin_top = 264.0
margin_right = 1024.0
margin_bottom = 314.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button16"]
position = Vector2( 37, 24 )
scale = Vector2( 2.5, 1 )
texture = ExtResource( 16 )

[node name="Button2" type="Button" parent="."]
margin_left = 440.0
margin_top = 320.0
margin_right = 512.0
margin_bottom = 370.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button20" type="Button" parent="."]
margin_left = 440.0
margin_top = 440.0
margin_right = 512.0
margin_bottom = 490.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button38" type="Button" parent="."]
margin_left = 507.263
margin_top = 440.0
margin_right = 579.263
margin_bottom = 490.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button39" type="Button" parent="."]
margin_left = 568.0
margin_top = 442.0
margin_right = 640.0
margin_bottom = 492.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button40" type="Button" parent="."]
margin_left = 632.0
margin_top = 442.0
margin_right = 704.0
margin_bottom = 492.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button41" type="Button" parent="."]
margin_left = 696.0
margin_top = 442.0
margin_right = 768.0
margin_bottom = 492.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button42" type="Button" parent="."]
margin_left = 760.0
margin_top = 442.0
margin_right = 832.0
margin_bottom = 492.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button43" type="Button" parent="."]
margin_left = 824.0
margin_top = 442.0
margin_right = 896.0
margin_bottom = 492.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button44" type="Button" parent="."]
margin_left = 888.0
margin_top = 442.0
margin_right = 960.0
margin_bottom = 492.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button45" type="Button" parent="."]
margin_left = 952.0
margin_top = 442.0
margin_right = 1024.0
margin_bottom = 492.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button22" type="Button" parent="."]
margin_left = 440.0
margin_top = 568.0
margin_right = 512.0
margin_bottom = 618.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button46" type="Button" parent="."]
margin_left = 504.0
margin_top = 568.0
margin_right = 576.0
margin_bottom = 618.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button47" type="Button" parent="."]
margin_left = 568.0
margin_top = 568.0
margin_right = 640.0
margin_bottom = 618.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button48" type="Button" parent="."]
margin_left = 632.0
margin_top = 568.0
margin_right = 704.0
margin_bottom = 618.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button49" type="Button" parent="."]
margin_left = 696.0
margin_top = 568.0
margin_right = 768.0
margin_bottom = 618.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button50" type="Button" parent="."]
margin_left = 760.0
margin_top = 568.0
margin_right = 832.0
margin_bottom = 618.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button51" type="Button" parent="."]
margin_left = 824.0
margin_top = 568.0
margin_right = 896.0
margin_bottom = 618.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button52" type="Button" parent="."]
margin_left = 888.0
margin_top = 568.0
margin_right = 960.0
margin_bottom = 618.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button54" type="Button" parent="."]
margin_left = 704.0
margin_top = 632.0
margin_right = 776.0
margin_bottom = 682.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 507.263
margin_top = 320.0
margin_right = 579.263
margin_bottom = 370.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="."]
margin_left = 568.0
margin_top = 320.0
margin_right = 640.0
margin_bottom = 370.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="."]
margin_left = 632.0
margin_top = 320.0
margin_right = 704.0
margin_bottom = 370.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button18" type="Button" parent="."]
margin_left = 696.0
margin_top = 320.0
margin_right = 768.0
margin_bottom = 370.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button10" type="Button" parent="."]
margin_left = 760.0
margin_top = 320.0
margin_right = 832.0
margin_bottom = 370.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button11" type="Button" parent="."]
margin_left = 824.0
margin_top = 320.0
margin_right = 896.0
margin_bottom = 370.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button14" type="Button" parent="."]
margin_left = 888.0
margin_top = 320.0
margin_right = 960.0
margin_bottom = 370.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button15" type="Button" parent="."]
margin_left = 952.0
margin_top = 320.0
margin_right = 1024.0
margin_bottom = 370.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 72.0
margin_top = 256.0
margin_right = 384.0
margin_bottom = 640.0
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button19" to="." method="_on_Button19_pressed"]
[connection signal="pressed" from="Button23" to="." method="_on_Button23_pressed"]
[connection signal="pressed" from="Button24" to="." method="_on_Button24_pressed"]
[connection signal="pressed" from="Button25" to="." method="_on_Button25_pressed"]
[connection signal="pressed" from="Button26" to="." method="_on_Button26_pressed"]
[connection signal="pressed" from="Button27" to="." method="_on_Button27_pressed"]
[connection signal="pressed" from="Button28" to="." method="_on_Button28_pressed"]
[connection signal="pressed" from="Button29" to="." method="_on_Button29_pressed"]
[connection signal="pressed" from="Button30" to="." method="_on_Button30_pressed"]
[connection signal="pressed" from="Button21" to="." method="_on_Button21_pressed"]
[connection signal="pressed" from="Button31" to="." method="_on_Button31_pressed"]
[connection signal="pressed" from="Button32" to="." method="_on_Button32_pressed"]
[connection signal="pressed" from="Button33" to="." method="_on_Button33_pressed"]
[connection signal="pressed" from="Button34" to="." method="_on_Button34_pressed"]
[connection signal="pressed" from="Button35" to="." method="_on_Button35_pressed"]
[connection signal="pressed" from="Button36" to="." method="_on_Button36_pressed"]
[connection signal="pressed" from="Button37" to="." method="_on_Button37_pressed"]
[connection signal="pressed" from="Button53" to="." method="_on_Button53_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button17" to="." method="_on_Button17_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Button12" to="." method="_on_Button12_pressed"]
[connection signal="pressed" from="Button13" to="." method="_on_Button13_pressed"]
[connection signal="pressed" from="Button16" to="." method="_on_Button16_pressed"]
[connection signal="pressed" from="Button54" to="." method="_on_Button54_pressed"]
